# ModernCompilersExercices

./: ModernCompilersExercices.cabal  README.md
app/: Main.hs
src/Ch01/: Introduction.hs
src/Mci/: Prelude.hs
src/Mci/StraightLine/: Exercices.hs  Interpretor.hs  PrettyPrint.hs  Syntax.hs  Types.hs  Utils.hs
test/: Spec.hs
