name:                ModernCompilersExercices
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ModernCompilersExercices#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Mci.StraightLine.Syntax
                     , Mci.StraightLine.PrettyPrint
                       Mci.StraightLine.Types

  other-modules:       Mci.Prelude
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , formatting
                     , mtl >= 2.2.1
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable ModernCompilersExercices-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       ModernCompilersExercices
                     , base
                     , containers >= 0.5.7.1
                     , mtl >= 2.2.1
                     , formatting
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite ModernCompilersExercices-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ModernCompilersExercices
                     , base
                     , containers >= 0.5.7.1
                     , mtl >= 2.2.1
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/ModernCompilersExercices
